# Oryxen

./: README.md
backend/: README.md  index.ts  package.json  test-pyth-prices.html
backend/src/controllers/: drfit.controller.ts  drift.controller.ts  gmxsol.controller.ts  hyperliquid.controller.ts  perps.controller.ts  perpslist.controller.ts  sync.controller.ts
backend/src/db/: client.ts  fundingRateService.ts  perps.service.ts  schema.ts
backend/src/middleware/: rateLimit.ts
backend/src/routes/: drfit.routes.ts  drift.routes.ts  gmxsol.routes.ts  hyperliquid.routes.ts  index.ts  perps.routes.ts  perpslist.routes.ts  sync.routes.ts
backend/src/types/: fundingRate.ts
backend/src/utils/: fundingRate.ts
frontend/: README.md  eslint.config.mjs  next.config.ts  node-browser-compatibility.js  package-lock.json  package.json  postcss.config.mjs
frontend/src/__tests__/: trading-flow.test.ts
frontend/src/adapters/: flash.ts  jupiter.ts  pacifica.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: LightPillar.jsx
frontend/src/config/: FundingRate.tsx  Navbar.tsx  env.ts  walletAccountModal.ts
gmt/: .env.example  .gitignore  Cargo.toml
gmt/idls/: gmsol_store.json
gmt/src/: main.rs  market.rs  order.rs  utils.rs
gmt/src/market/: mod.rs  status.rs
gmt/src/order/: cancel.rs  close.rs  create.rs  limit.rs  mod.rs  tp_sl.rs  update.rs
gmt/src/position/: close.rs  collateral.rs  get.rs  mod.rs
gmt/src/swap/: market_swap.rs  mod.rs
gmt/src/wallet/: setup.rs
(+194 files in other folders)
